--- a/intrepreting-machine-learning-models-notworking.ipynb
+++ b/intrepreting-machine-learning-models-notworking.ipynb
@@ -3153,7 +3153,7 @@
     }
    ],
    "source": [
-    "# Let's plot a decision tree source : #https://www.kaggle.com/willkoehrsen/visualize-a-decision-tree-w-python-scikit-learn\n",
+    "# Let's plot a decision tree source : \n",
     "# Since there are a lot of attributes, it is difficult to actually make sense of the decision tree graph in this notebook. \n",
     "# It is advised to export it as png and view it.\n",
     "\n",
